🛍️ Step 4: Product Module ✅ Add a product ✅ Edit a product ✅ Delete a product ✅ List all products ✅ View a product by ID

--- a/docs/1.md
+++ b/docs/1.md
@@ -30,3 +30,11 @@ nest g service users
 ```
 
 ## 4 Create and Register User Entity
+
+## 5 Generate Product Module
+
+```bash
+nest g module products
+nest g service products
+nest g controller products
+```
