Step 6: Cart Module ✅ Add products to cart ✅ View items in their cart ✅ Update quantity ✅ Remove items Each user has their own cart, and we’ll link it to their user ID.

--- a/docs/1.md
+++ b/docs/1.md
@@ -38,3 +38,11 @@ nest g module products
 nest g service products
 nest g controller products
 ```
+
+## 6 Generate Cart Module
+
+```bash
+nest g module cart
+nest g service cart
+nest g controller cart
+```
