🛒 Step 7: Order Features - Place an order from the current cart - View order history (per user) - Admin can view all orders - Store details like items, quantity, price, total, status

--- a/docs/1.md
+++ b/docs/1.md
@@ -46,3 +46,11 @@ nest g module cart
 nest g service cart
 nest g controller cart
 ```
+
+## 7 Order Module
+
+```bash
+nest g module orders
+nest g service orders
+nest g controller orders
+```
