🧪 Step 10: Adding DTOs and validation Update Entity file path without any modifications

--- a/docs/1.md
+++ b/docs/1.md
@@ -9,6 +9,11 @@ yarn add class-validator class-transformer
 yarn add bcrypt
 ```
 
+## DTOs – to define the shape of data for each endpoint
+
+class-validator – to validate request payloads
+class-transformer – to transform raw request data into class instances
+
 🧪 Dev Types:
 
 ```bash
